Use targetSdkVersion 25, compileSdkVersion 25 and Google support library v.25.4.0.
+ Updates in the dependency tree:

  com.google.android.gms:play-services-base:10.0.1
    -> com.google.android.gms:play-services-basement:10.0.1
      -> com.android.support:support-v4:24.0.0 -> 25.4.0

  com.github.ligi.snackengage:snackengage-playrate:0.15
    -> com.github.ligi.snackengage:snackengage-core:0.15
      -> com.android.support:design:25.3.1 -> 25.4.0

+ See 745993c6387dab34ef06acf964d04b1746d4c7dc.

Resolves #12.

--- a/Umweltzone/build.gradle
+++ b/Umweltzone/build.gradle
@@ -43,12 +43,12 @@ allprojects {
 }
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode versionMajor * 100000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
         buildConfigField "String", "BUILD_VERSION", "\"${versionName}\""
@@ -128,9 +128,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-base:$playServicesVersion"
     implementation "com.google.android.gms:play-services-maps:$playServicesVersion"
     implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
-    implementation("com.github.ligi.snackengage:snackengage-playrate:$snackengagePlayrateVersion") {
-        exclude group: "com.android.support"
-    }
+    implementation "com.github.ligi.snackengage:snackengage-playrate:$snackengagePlayrateVersion"
     implementation "de.cketti.library.changelog:ckchangelog:$ckChangelogVersion"
     implementation "info.metadude.android:typed-preferences:$typedPreferencesVersion"
     implementation "org.parceler:parceler-api:$parcelerVersion"
